# AI-Human-Collaboration

./: .gitignore  README.md  package-lock.json
.cursor/rules/: o3collab.mdc
frontend/: .eslintrc.cjs  index.html  package-lock.json  postcss.config.js  tsconfig.json
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Pricing.tsx
ivdar-backend/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
ivdar-backend/app/: main.py
ivdar-backend/app/api/routes/: sheets.py
ivdar-backend/app/services/: sheets.py
ivdar-backend/ivdar_backend/: __init__.py  config.py  sheets.py
ivdar-backend/scripts/: smoke_sheets.ps1  smoke_sheets.py
ivdar-backend/tests/: test_api.py
ivdar-frontend/: .eslintrc.cjs  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.js
ivdar-frontend/src/: App.tsx  index.css  main.tsx
ivdar-frontend/src/components/: DonutAllocation.tsx  DonutChart.tsx  Footer.tsx  Layout.tsx  Nav.tsx
ivdar-frontend/src/hooks/: useAllocations.ts
ivdar-frontend/src/lib/: fetcher.ts
ivdar-frontend/src/mocks/: browser.ts
ivdar-frontend/src/pages/: Dashboard.tsx  Home.tsx  NotFound.tsx  Pricing.tsx
ivdar-frontend/src/types/: declaration.d.ts  react-plotly.d.ts
