[tool.poetry]
name = "ivdar-backend"
version = "0.1.0"
description = "Backend for IVDAR Google-Sheets data pipeline"
authors = ["baboondude <codstream7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
