[tool.poetry]
name = "ivdar-backend"
version = "0.1.0"
description = "Backend for IVDAR Google-Sheets data pipeline"
authors = ["baboondude <codstream7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^6.2.0"
google-auth = "^2.39.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
